--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -13,50 +13,78 @@
 {% block content %}
   <div class="container-fluid p-0">
     <div class="hero d-flex align-items-center justify-content-center text-white">
-      <h1 class="hero-section">Hero Section</h1>
     </div>
   </div>
-
-  <div class="container my-4">
-  <hr class="center-diamond">
   <div class="row text-center">
+    <div class="col">
+      <h1 class="homepage-headers header mt-3">NEW ARRIVALS</h1>
+      <hr class="center-diamond mt-3">
+    </div>
+  </div>
+  <div class="container my-4">
+  <div class="row text-center mt-3">
       <div class="col-6 col-md-3">
           <img src="/media/bluetele.jpg" class="img-fluid" alt="">
-          <p>Text 1</p>
+          <p class="text-black mt-3 homepage-font" >Fender American Ultra Stratocaster</p>
+          <p class="gold-font homepage-font">£1899.99</p>
       </div>
       <div class="col-6 col-md-3">
         <img src="/media/bluetele.jpg" class="img-fluid" alt="">
-          <p>Text 2</p>
+          <p class="text-black mt-3 homepage-font">Gibson L-00 Blues King Acoustic Guitar</p>
+          <p class="gold-font homepage-font">£1599.99</p>
       </div>
       <div class="col-6 col-md-3">
         <img src="/media/bluetele.jpg" class="img-fluid" alt="">
-          <p>Text 3</p>
+          <p class="text-black mt-3 homepage-font">Fender American Professional II Jazz Bass</p>
+          <p class="gold-font homepage-font">£1499.99</p>
       </div>
       <div class="col-6 col-md-3">
         <img src="/media/bluetele.jpg" class="img-fluid" alt="">
-          <p>Text 4</p>
+          <p class="text-black mt-3 homepage-font">Gibson Les Paul Classic '60s</p>
+          <p class="gold-font homepage-font">£2199.99</p>
       </div>
   </div>
-  <hr class="center-diamond">
-  <div class="row justify-content-center text-center mt-4">
-      <div class="col-5 col-md-2 mx-4">
-          <img src="/media/bluetele.jpg" class="img-fluid" alt="">
-          <p>Text 5</p>
-      </div>
-      <div class="col-5 col-md-2 mx-4">
-          <img src="/media/bluetele.jpg" class="img-fluid" alt="">
-          <p>Text 6</p>
-      </div>
-      <div class="col-5 col-md-2 mx-4">
-          <img src="/media/bluetele.jpg" class="img-fluid" alt="">
-          <p>Text 7</p>
-      </div>
-      <div class="col-5 col-md-2 mx-4">
-          <img src="/media/bluetele.jpg" class="img-fluid" alt="">
-          <p>Text 8</p>
-      </div>
+  <div class="row text-center mt-3">
+    <div class="col">
+      <a class="fs-5 header mt-3 text-decoration-none text-black" href="">
+        EXPLORE MORE <i class="fas fa-arrow-right"></i>
+      </a>
+    </div>
   </div>
-  <hr class="center-diamond">
+  <div class="row text-center">
+    <div class="col">
+      <h2 class="homepage-headers header mt-4">BRANDS</h2>
+      <hr class="center-diamond mt-3">
+    </div>
+  </div>
+  <div class="row text-center mt-4 mb-3 mx-auto w-75">
+    <div class="col-6 col-md-3 d-flex justify-content-center">
+      <a href="{% url 'products' %}?q=fender">
+        <img src="/media/fender-logo.png" class="img-fluid w-75" alt="fender logo">
+      </a>
+    </div>
+    <div class="col-6 col-md-3 d-flex justify-content-center">
+      <a href="{% url 'products' %}?q=gibson">
+        <img src="/media/gibson.png" class="img-fluid w-75" alt="gibson logo">
+      </a>
+    </div>
+    <div class="col-6 col-md-3 d-flex justify-content-center">
+      <a href="{% url 'products' %}?q=squier">
+        <img src="/media/squier-logo.png" class="img-fluid w-75" alt="squier logo">
+      </a>
+    </div>
+    <div class="col-6 col-md-3 d-flex justify-content-center">
+      <a href="{% url 'products' %}?q=epiphone">
+        <img src="/media/epiphone.png" class="img-fluid w-75" alt="epiphone logo">
+      </a>
+    </div>
+</div>
+  <div class="row text-center">
+    <div class="col">
+      <h3 class="homepage-headers header mt-3">COLLECTIONS</h3>
+      <hr class="center-diamond mt-3">
+    </div>
+  </div>
   <div class="row text-center mt-4">
       <div class="col-md-6">
           <img src="/media/bluetele.jpg" class="img-fluid" alt="">
@@ -67,7 +95,13 @@
           <p>Text 10</p>
       </div>
   </div>
-
+  <div class="row text-center">
+    <div class="col">
+      <h4 class="homepage-headers header mt-3">FOLLOW US</h4>
+      <hr class="center-diamond mt-3">
+      <i class="fab fa-instagram icon-red fa-3x mt-3"></i>
+    </div>
+  </div>
   <div class="row text-center mt-4">
       <div class="col-6 col-md-3">
           <img src="/media/bluetele.jpg" class="img-fluid square-img" alt="">
