--- a/static/css/base.css
+++ b/static/css/base.css
@@ -31,29 +31,9 @@ body {
 .hero {
   height: 70vh;
   background: url("/media/desktophero.png") center/cover no-repeat;
+  position: relative; /* Needed for absolute positioning of the text */
+  max-height: 100%;
 }
-
-.hero img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover; /* Ensures it covers the whole area */
-  z-index: -1; /* Keeps it behind text */
-}
-
-.hero-text {
-  color: white;
-  position: relative;
-  z-index: 1;
-}
-.shop-now-button {
-  background: black;
-  color: white;
-  min-width: 260px;
-}
-
 .btn-black {
   background: #1f1f1f;
   color: #a67c00;
@@ -180,6 +160,10 @@ a:-webkit-any-link {
 
 .pagination {
   color: #1f1f1f;
+}
+
+.homepage-headers {
+  font-size: 28px;
 }
 
 /* -------------------------------- Footer */
@@ -370,23 +354,16 @@ footer {
 
 /* -------------------------------- Media Queries */
 
-/* smallest screen size (up to 320px) */
+/* Smallest screen size (up to 320px) */
 @media (max-width: 320px) {
   .custom-toast {
     max-width: 296px;
   }
-}
-
-/* mobile screen size (up to 600px) */
-@media (max-width: 600px) {
-  .mobile-bottom-btn {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100vw;
-    z-index: 1000;
+  .homepage-font {
+    font-size: 1rem;
   }
 }
+
 /* Mobile Styles (up to 767px) */
 @media (max-width: 767px) {
   .mobile-header {
@@ -412,6 +389,16 @@ footer {
   }
   .accordion-desktop {
     display: none;
+  }
+  .homepage-font {
+    font-size: 1rem;
+  }
+  .mobile-bottom-btn {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100vw;
+    z-index: 1000;
   }
 }
 
@@ -443,8 +430,8 @@ footer {
   body {
     padding-top: 56px;
   }
-  .mobile-header {
-    display: none;
+  .homepage-font {
+    font-size: 1.25rem;
   }
 }
 
@@ -465,11 +452,12 @@ footer {
   .accordion-mobile {
     display: none;
   }
-  .mobile-header {
-    display: none;
+  .homepage-font {
+    font-size: 1.25rem;
   }
 }
 
+/* Pagination Only */
 /* For small screens, reduce the font size and padding of pagination items */
 @media (max-width: 576px) {
   .pagination {
