feat: links added, images added

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -24,29 +24,29 @@
   <div class="container my-4">
   <div class="row text-center mt-3">
       <div class="col-6 col-md-3">
-          <img src="/media/bluetele.jpg" class="img-fluid" alt="">
+          <img src="/media/products/bluetele.jpg" class="img-fluid" alt="">
           <p class="text-black mt-3 homepage-font" >Fender American Ultra Stratocaster</p>
           <p class="gold-font homepage-font">£1899.99</p>
       </div>
       <div class="col-6 col-md-3">
-        <img src="/media/bluetele.jpg" class="img-fluid" alt="">
+        <img src="/media/products/bluetele.jpg" class="img-fluid" alt="">
           <p class="text-black mt-3 homepage-font">Gibson L-00 Blues King Acoustic Guitar</p>
           <p class="gold-font homepage-font">£1599.99</p>
       </div>
       <div class="col-6 col-md-3">
-        <img src="/media/bluetele.jpg" class="img-fluid" alt="">
+        <img src="/media/products/bluetele.jpg" class="img-fluid" alt="">
           <p class="text-black mt-3 homepage-font">Fender American Professional II Jazz Bass</p>
           <p class="gold-font homepage-font">£1499.99</p>
       </div>
       <div class="col-6 col-md-3">
-        <img src="/media/bluetele.jpg" class="img-fluid" alt="">
+        <img src="/media/products/bluetele.jpg" class="img-fluid" alt="">
           <p class="text-black mt-3 homepage-font">Gibson Les Paul Classic '60s</p>
           <p class="gold-font homepage-font">£2199.99</p>
       </div>
   </div>
   <div class="row text-center mt-3">
     <div class="col">
-      <a class="fs-5 header mt-3 text-decoration-none text-black" href="">
+      <a class="fs-5 header mt-3 text-decoration-none text-black" href="{% url 'products' %}">
         EXPLORE MORE <i class="fas fa-arrow-right"></i>
       </a>
     </div>
@@ -87,11 +87,11 @@
   </div>
   <div class="row text-center mt-4">
       <div class="col-md-6">
-          <img src="/media/bluetele.jpg" class="img-fluid" alt="">
+          <img src="/media/products/bluetele.jpg" class="img-fluid" alt="">
           <p>Text 9</p>
       </div>
       <div class="col-md-6">
-          <img src="/media/bluetele.jpg" class="img-fluid" alt="">
+          <img src="/media/products/bluetele.jpg" class="img-fluid" alt="">
           <p>Text 10</p>
       </div>
   </div>
@@ -104,20 +104,24 @@
   </div>
   <div class="row text-center mt-4">
       <div class="col-6 col-md-3">
-          <img src="/media/bluetele.jpg" class="img-fluid square-img" alt="">
-          <p>Text 11</p>
+        <a href="https://www.instagram.com" target="_blank">
+          <img src="/media/insta1.png" class="img-fluid square-img" alt="">
+        </a>
       </div>
       <div class="col-6 col-md-3">
-          <img src="/media/bluetele.jpg" class="img-fluid square-img" alt="">
-          <p>Text 12</p>
+        <a href="https://www.instagram.com" target="_blank">
+          <img src="/media/insta2.png" class="img-fluid square-img" alt="">
+        </a>
       </div>
       <div class="col-6 col-md-3">
-          <img src="/media/bluetele.jpg" class="img-fluid square-img" alt="">
-          <p>Text 13</p>
+        <a href="https://www.instagram.com" target="_blank">
+          <img src="/media/insta3.png" class="img-fluid square-img" alt="">
+        </a>
       </div>
       <div class="col-6 col-md-3">
-          <img src="/media/bluetele.jpg" class="img-fluid square-img" alt="">
-          <p>Text 14</p>
+        <a href="https://www.instagram.com" target="_blank">
+          <img src="/media/insta4.png" class="img-fluid square-img" alt="">
+        </a>
       </div>
   </div>
   </div>
