--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -36,7 +36,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.example.com" target="_blank" class="text-decoration-none">
+                            <a href="https://x.com/" target="_blank" class="text-decoration-none">
                                 <i class="fa-brands fa-x-twitter icon-red fa-2x"></i>
                             </a>
                         </li>
