--- a/templates/includes/mobile_footer.html
+++ b/templates/includes/mobile_footer.html
@@ -22,7 +22,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.example.com" target="_blank" class="text-decoration-nonemb-0">
+                            <a href="https://x.com/" target="_blank" class="text-decoration-nonemb-0">
                                 <i class="fa-brands fa-x-twitter icon-red fa-lg"></i>
                             </a>
                         </li>
