--- a/blog/templates/blog/blog_detail.html
+++ b/blog/templates/blog/blog_detail.html
@@ -4,8 +4,11 @@
 {% block content %}
 <div class="container">
     <h2>{{ post.title }}</h2>
-    <p><strong>By {{ post.author.name }}</strong></p>
+    {% if post.image %}
+        <img src="{{ post.image.url }}" alt="{{ post.title }}" class="img-fluid">
+    {% endif %}
     <p>{{ post.content }}</p>
+    <p><strong>By {{ post.author.name }}</strong></p>
     {% if request.user.is_superuser %}
     <div class="row">
         <div class="col">
@@ -15,9 +18,6 @@
             </small>
         </div>
     </div>
-    {% endif %}
-    {% if post.image %}
-        <img src="{{ post.image.url }}" alt="{{ post.title }}">
     {% endif %}
 </div>
 {% endblock %}
