feat: images added and loaded

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -65,7 +65,7 @@
     </div>
     <div class="col-6 col-md-3 d-flex justify-content-center">
       <a href="{% url 'products' %}?q=gibson">
-        <img src="/media/gibson.png" class="img-fluid w-75" alt="gibson logo">
+        <img src="/media/gibson-logo.png" class="img-fluid w-75" alt="gibson logo">
       </a>
     </div>
     <div class="col-6 col-md-3 d-flex justify-content-center">
@@ -75,7 +75,7 @@
     </div>
     <div class="col-6 col-md-3 d-flex justify-content-center">
       <a href="{% url 'products' %}?q=epiphone">
-        <img src="/media/epiphone.png" class="img-fluid w-75" alt="epiphone logo">
+        <img src="/media/epiphone-logo.png" class="img-fluid w-75" alt="epiphone logo">
       </a>
     </div>
 </div>
