chore: alt text changed

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -24,22 +24,22 @@
   <div class="container my-4">
   <div class="row text-center mt-3">
       <div class="col-6 col-md-3">
-          <img src="/media/products/bluetele.jpg" class="img-fluid" alt="">
+          <img src="/media/products/bluetele.jpg" class="img-fluid" alt="Fender American Ultra Stratocaster">
           <p class="text-black mt-3 homepage-font" >Fender American Ultra Stratocaster</p>
           <p class="gold-font homepage-font">£1899.99</p>
       </div>
       <div class="col-6 col-md-3">
-        <img src="/media/products/bluetele.jpg" class="img-fluid" alt="">
+        <img src="/media/products/bluetele.jpg" class="img-fluid" alt="Gibson L-00 Blues King Acoustic Guitar">
           <p class="text-black mt-3 homepage-font">Gibson L-00 Blues King Acoustic Guitar</p>
           <p class="gold-font homepage-font">£1599.99</p>
       </div>
       <div class="col-6 col-md-3">
-        <img src="/media/products/bluetele.jpg" class="img-fluid" alt="">
+        <img src="/media/products/bluetele.jpg" class="img-fluid" alt="Fender American Professional II Jazz Bass">
           <p class="text-black mt-3 homepage-font">Fender American Professional II Jazz Bass</p>
           <p class="gold-font homepage-font">£1499.99</p>
       </div>
       <div class="col-6 col-md-3">
-        <img src="/media/products/bluetele.jpg" class="img-fluid" alt="">
+        <img src="/media/products/bluetele.jpg" class="img-fluid" alt="Gibson Les Paul Classic '60s">
           <p class="text-black mt-3 homepage-font">Gibson Les Paul Classic '60s</p>
           <p class="gold-font homepage-font">£2199.99</p>
       </div>
