chore: images swapped to webp

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -105,22 +105,22 @@
   <div class="row text-center mt-4">
       <div class="col-6 col-md-3">
         <a href="https://www.instagram.com" target="_blank">
-          <img src="/media/insta1.png" class="img-fluid square-img" alt="">
+          <img src="/media/insta1.webp" class="img-fluid square-img" alt="instagram profile">
         </a>
       </div>
       <div class="col-6 col-md-3">
         <a href="https://www.instagram.com" target="_blank">
-          <img src="/media/insta2.png" class="img-fluid square-img" alt="">
+          <img src="/media/insta2.webp" class="img-fluid square-img" alt="instagram profile">
         </a>
       </div>
       <div class="col-6 col-md-3">
         <a href="https://www.instagram.com" target="_blank">
-          <img src="/media/insta3.png" class="img-fluid square-img" alt="">
+          <img src="/media/insta3.webp" class="img-fluid square-img" alt="instagram profile">
         </a>
       </div>
       <div class="col-6 col-md-3">
         <a href="https://www.instagram.com" target="_blank">
-          <img src="/media/insta4.png" class="img-fluid square-img" alt="">
+          <img src="/media/insta4.webp" class="img-fluid square-img" alt="instagram profile">
         </a>
       </div>
   </div>
