chore: all product images added

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -115,7 +115,7 @@
       </div>
       <div class="col-6 col-md-3">
         <a href="https://www.instagram.com" target="_blank">
-          <img src="/media/insta3.webp" class="img-fluid square-img" alt="instagram profile">
+          <img src="media/insta3.webp" class="img-fluid square-img" alt="instagram profile">
         </a>
       </div>
       <div class="col-6 col-md-3">
