test: image path test

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -60,7 +60,7 @@
   <div class="row text-center mt-4 mb-3 mx-auto w-75">
     <div class="col-6 col-md-3 d-flex justify-content-center">
       <a href="{% url 'products' %}?q=fender">
-        <img src="/media/fender-logo.png" class="img-fluid w-75" alt="fender logo">
+        <img src="https://string-theory.s3.eu-north-1.amazonaws.com/media/insta4.webp" class="img-fluid w-75" alt="fender logo">
       </a>
     </div>
     <div class="col-6 col-md-3 d-flex justify-content-center">
