--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="icon" href="/guitaricon.png" type="image/x-icon">
     {% block meta %}
     <meta
       name="viewport"
