chore: readme framework added, images added for wireframe

--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -22,6 +22,7 @@
                 <h2 class="logo-font mb-4">Thank You</h2>
                 <hr>
                 <p class="text-black">Your order information is below. A confirmation email will be sent to <strong>{{ order.email }}</strong>.</p>
+                <p class="text-black">If you wish to make an account to save your information for future purchases, <a class="text-decoration-none" href="{% url 'account_signup'%}">click here!</a></p>
             </div>
         </div>
 
