feat: all images added, correct sizes and file types. index complete, footer complete, contact us auto opens email/text/whatsapp

--- a/home/templates/home/contact_us.html
+++ b/home/templates/home/contact_us.html
@@ -23,20 +23,26 @@
         <div class="col">
           <i class="fa-regular fa-comment-dots fa-5x icon-orange mt-5"></i>
           <p class="mt-5">Need an ASAP answer? Contact us via chat, 24/7! For existing orders, please call us on +1869 341070.</p>
-          <button class="btn btn-black rounded-0">Chat With Us</button>
+          <a href="mailto:support@example.com" class="btn btn-black rounded-0">Chat With Us</a>
         </div>
     </div> 
     <div class="row text-center mt-5">
       <div class="col">
         <i class="fas fa-envelope-open-text fa-5x icon-orange mt-5"></i>
-        <p class="mt-5">You can text us at +44-785-553-0615 – or click on the “text us” link below on your mobile device. Please allow the system to acknowledge a simple greeting (even “Hi” will do!) before providing your question/order details. Consent is not required for any purchase. Message and data rates may apply. Text messaging may not be available via all carriers.</p>
-        <button class="btn btn-black rounded-0">Chat With Us</button>
+        <p class="mt-5">You can text us at +1869 341070 – or click on the “text us” link below on your mobile device. Please allow the system to acknowledge a simple greeting (even “Hi” will do!) before providing your question/order details. Consent is not required for any purchase. Message and data rates may apply. Text messaging may not be available via all carriers.</p>
+        <div class="col text-center">
+          <a href="sms:+1869 341070" class="btn btn-black rounded-0">Text Us</a>
+        </div>
+        <div class="col text-center mt-3">
+          <a href="https://wa.me/1869 341070" class="btn btn-black rounded-0">Chat on WhatsApp</a>
+        </div>
       </div>
     </div>  
     <div class="row text-center mt-5 ">
         <div class="col">
           <i class="fas fa-inbox fa-5x icon-orange mt-5"></i>
           <p class="mt-5">To send us a private or direct message, like @StringTheory on Instagram or follow us on X (formally Twitter). We’ll get back to you ASAP. Please include your name, order number, and email address for a faster response!</p>
+          <a href="https://x.com/" class="btn btn-black rounded-0" target="_blank">Chat With Us</a>
         </div>
     </div>  
     </div>
