--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -22,27 +22,28 @@
     </div>
   </div>
   <div class="container my-4">
-  <div class="row text-center mt-3">
+    <div class="row text-center mt-3">
       <div class="col-6 col-md-3">
-          <img src="/media/products/bluetele.jpg" class="img-fluid" alt="Fender American Ultra Stratocaster">
-          <p class="text-black mt-3 homepage-font" >Fender American Ultra Stratocaster</p>
-          <p class="gold-font homepage-font">£1899.99</p>
+        <img src="/media/products/fenderstratwhite.webp" class="img-fluid" alt="Fender American Ultra Stratocaster"> <!-- pk29 -->
+        <p class="text-black mt-3 homepage-font" >Fender American Ultra Stratocaster</p>
+        <p class="gold-font homepage-font">£1899.99</p>
       </div>
       <div class="col-6 col-md-3">
-        <img src="/media/products/bluetele.jpg" class="img-fluid" alt="Gibson L-00 Blues King Acoustic Guitar">
-          <p class="text-black mt-3 homepage-font">Gibson L-00 Blues King Acoustic Guitar</p>
-          <p class="gold-font homepage-font">£1599.99</p>
+        <img src="/media/products/gibsonacousticsunburst.webp" class="img-fluid" alt="Gibson L-00 Blues King Acoustic Guitar"> <!-- pk101 -->
+        <p class="text-black mt-3 homepage-font">Gibson L-00 Blues King Acoustic Guitar</p>
+        <p class="gold-font homepage-font">£1599.99</p>
       </div>
       <div class="col-6 col-md-3">
-        <img src="/media/products/bluetele.jpg" class="img-fluid" alt="Fender American Professional II Jazz Bass">
-          <p class="text-black mt-3 homepage-font">Fender American Professional II Jazz Bass</p>
-          <p class="gold-font homepage-font">£1499.99</p>
+        <img src="/media/products/fenderjazzolive.webp" class="img-fluid" alt="Fender American Professional II Jazz Bass"> <!-- pk22 -->
+        <p class="text-black mt-3 homepage-font">Fender American Professional II Jazz Bass</p>
+        <p class="gold-font homepage-font">£1499.99</p>
       </div>
       <div class="col-6 col-md-3">
-        <img src="/media/products/bluetele.jpg" class="img-fluid" alt="Gibson Les Paul Classic '60s">
-          <p class="text-black mt-3 homepage-font">Gibson Les Paul Classic '60s</p>
-          <p class="gold-font homepage-font">£2199.99</p>
+        <img src="/media/products/gibsonlespaulblack.webp" class="img-fluid" alt="Gibson Les Paul Classic '60s Electric Guitar"> <!-- pk8 -->
+        <p class="text-black mt-3 homepage-font">Gibson Les Paul Classic '60s Electric Guitar</p>
+        <p class="gold-font homepage-font">£2199.99</p>
       </div>
+    </div>
   </div>
   <div class="row text-center mt-3">
     <div class="col">
@@ -85,14 +86,12 @@
       <hr class="center-diamond mt-3">
     </div>
   </div>
-  <div class="row text-center mt-4">
-      <div class="col-md-6">
-          <img src="/media/products/bluetele.jpg" class="img-fluid" alt="">
-          <p>Text 9</p>
+  <div class="row text-center mt-4 justify-content-center">
+      <div class="col-md-5 mb-3 mb-md-0 px-3">
+          <img src="/media/collection1.webp" class="img-fluid collection" alt="">
       </div>
-      <div class="col-md-6">
-          <img src="/media/products/bluetele.jpg" class="img-fluid" alt="">
-          <p>Text 10</p>
+      <div class="col-md-5 px-3">
+          <img src="/media/collection2.webp" class="img-fluid collection" alt="">
       </div>
   </div>
   <div class="row text-center">
@@ -102,23 +101,23 @@
       <i class="fab fa-instagram icon-red fa-3x mt-3"></i>
     </div>
   </div>
-  <div class="row text-center mt-4">
-      <div class="col-6 col-md-3">
+  <div class="row text-center mt-4 justify-content-center">
+      <div class="col-6 col-md-3 mb-3 mb-md-0 px-3">
         <a href="https://www.instagram.com" target="_blank">
           <img src="/media/insta1.webp" class="img-fluid square-img" alt="instagram profile">
         </a>
       </div>
-      <div class="col-6 col-md-3">
+      <div class="col-6 col-md-3 px-3">
         <a href="https://www.instagram.com" target="_blank">
           <img src="/media/insta2.webp" class="img-fluid square-img" alt="instagram profile">
         </a>
       </div>
-      <div class="col-6 col-md-3">
+      <div class="col-6 col-md-3 mb-3 mb-md-0 px-3">
         <a href="https://www.instagram.com" target="_blank">
           <img src="media/insta3.webp" class="img-fluid square-img" alt="instagram profile">
         </a>
       </div>
-      <div class="col-6 col-md-3">
+      <div class="col-6 col-md-3 px-3">
         <a href="https://www.instagram.com" target="_blank">
           <img src="/media/insta4.webp" class="img-fluid square-img" alt="instagram profile">
         </a>
