feat: Readme images added

--- a/blog/templates/blog/blog.html
+++ b/blog/templates/blog/blog.html
@@ -75,7 +75,7 @@
           {% endfor %}
         </div>
       </div>
-      <hr>
+      <hr class="center-diamond">
     {% endfor %}
 
     <nav aria-label="Blog page navigation">
