feat: more Readme images added

--- a/blog/templates/blog/edit_blog.html
+++ b/blog/templates/blog/edit_blog.html
@@ -16,7 +16,7 @@
         <div class="row text-center">
             <div class="col-12">
                 <h2 class="logo-font mb-4">Blog Entry</h2>
-                <h5 class="text-muted">Please add your blog below</h5>
+                <h5 class="text-muted">Please edit your blog below</h5>
                 <hr>
             </div>
         </div>
