feat: readme images added. homepage buttons linked. some readme features completed

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -24,22 +24,22 @@
   <div class="container my-4">
     <div class="row text-center mt-3">
       <div class="col-6 col-md-3">
-        <img src="/media/products/fenderstratwhite.webp" class="img-fluid" alt="Fender American Ultra Stratocaster"> <!-- pk29 -->
+        <a href="{% url 'product_detail' 29 %}"><img src="/media/products/fenderstratwhite.webp" class="img-fluid" alt="Fender American Ultra Stratocaster"></a> <!-- pk29 -->
         <p class="text-black mt-3 homepage-font" >Fender American Ultra Stratocaster</p>
         <p class="gold-font homepage-font">£1899.99</p>
       </div>
       <div class="col-6 col-md-3">
-        <img src="/media/products/gibsonacousticsunburst.webp" class="img-fluid" alt="Gibson L-00 Blues King Acoustic Guitar"> <!-- pk101 -->
+        <a href="{% url 'product_detail' 101 %}"><img src="/media/products/gibsonacousticsunburst.webp" class="img-fluid" alt="Gibson L-00 Blues King Acoustic Guitar"></a> <!-- pk101 -->
         <p class="text-black mt-3 homepage-font">Gibson L-00 Blues King Acoustic Guitar</p>
         <p class="gold-font homepage-font">£1599.99</p>
       </div>
       <div class="col-6 col-md-3">
-        <img src="/media/products/fenderjazzolive.webp" class="img-fluid" alt="Fender American Professional II Jazz Bass"> <!-- pk22 -->
+        <a href="{% url 'product_detail' 22 %}"><img src="/media/products/fenderjazzolive.webp" class="img-fluid" alt="Fender American Professional II Jazz Bass"></a> <!-- pk22 -->
         <p class="text-black mt-3 homepage-font">Fender American Professional II Jazz Bass</p>
         <p class="gold-font homepage-font">£1499.99</p>
       </div>
       <div class="col-6 col-md-3">
-        <img src="/media/products/gibsonlespaulblack.webp" class="img-fluid" alt="Gibson Les Paul Classic '60s Electric Guitar"> <!-- pk8 -->
+        <a href="{% url 'product_detail' 8 %}"><img src="/media/products/gibsonlespaulblack.webp" class="img-fluid" alt="Gibson Les Paul Classic '60s Electric Guitar"></a> <!-- pk8 -->
         <p class="text-black mt-3 homepage-font">Gibson Les Paul Classic '60s Electric Guitar</p>
         <p class="gold-font homepage-font">£2199.99</p>
       </div>
