chore: heroku images test

--- a/home/templates/home/about_us.html
+++ b/home/templates/home/about_us.html
@@ -21,11 +21,11 @@
         <p>
           Founded with a passion for music and craftsmanship, our company brings the soul of iconic guitars to players of all levels.  Specialising in Fender and Gibson guitars, we celebrate the timeless sounds that have shaped music history. Whether you’re chasing the crisp twang of a Stratocaster or the warm resonance of a Les Paul, we’re here to connect musicians with instruments that inspire creativity and elevate their craft.
         </p>
-        <img class="img-fluid" src="/media/blog/blogimageguitarlineup.webp" alt="guitar lineup">
+        <img class="img-fluid" src="https://string-theory.s3.eu-north-1.amazonaws.com/media/blog/blogimageguitarlineup.webp" alt="guitar lineup">
         <p>
           Beyond just selling guitars, we are dedicated to fostering a community of musicians who share our love for rich tones and impeccable craftsmanship. Our carefully curated selection ensures that each instrument meets the highest standards, whether you’re a beginner picking up your first guitar or a seasoned professional looking for your next masterpiece. We believe that every musician deserves an instrument that feels like an extension of themselves.
         </p>
-        <img class="img-fluid" src="/media/aboutus1.webp" alt="woman playing guitar in store">
+        <img class="img-fluid" src="https://string-theory.s3.eu-north-1.amazonaws.com/media/aboutus1.webp" alt="woman playing guitar in store">
         <p>
           Customer satisfaction and expert guidance are at the heart of what we do. Our team consists of passionate musicians who understand the nuances of tonewoods, pickups, and playability, offering personalized advice to help you find the perfect match. Whether you need assistance choosing a guitar, setting up your instrument, or exploring accessories to enhance your sound, we’re here to support your musical journey every step of the way.
         </p>
