--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -24,22 +24,22 @@
   <div class="container my-4">
     <div class="row text-center mt-3">
       <div class="col-6 col-md-3">
-        <a href="{% url 'product_detail' 29 %}"><img src="/media/products/fenderstratwhite.webp" class="img-fluid" alt="Fender American Ultra Stratocaster"></a> <!-- pk29 -->
+        <a href="{% url 'product_detail' 29 %}"><img src="https://string-theory.s3.eu-north-1.amazonaws.com/media/products/fenderstratwhite.webp" class="img-fluid" alt="Fender American Ultra Stratocaster"></a> <!-- pk29 -->
         <p class="text-black mt-3 homepage-font" >Fender American Ultra Stratocaster</p>
         <p class="gold-font homepage-font">£1899.99</p>
       </div>
       <div class="col-6 col-md-3">
-        <a href="{% url 'product_detail' 101 %}"><img src="/media/products/gibsonacousticsunburst.webp" class="img-fluid" alt="Gibson L-00 Blues King Acoustic Guitar"></a> <!-- pk101 -->
+        <a href="{% url 'product_detail' 101 %}"><img src="https://string-theory.s3.eu-north-1.amazonaws.com/media/products/gibsonacousticsunburst.webp" class="img-fluid" alt="Gibson L-00 Blues King Acoustic Guitar"></a> <!-- pk101 -->
         <p class="text-black mt-3 homepage-font">Gibson L-00 Blues King Acoustic Guitar</p>
         <p class="gold-font homepage-font">£1599.99</p>
       </div>
       <div class="col-6 col-md-3">
-        <a href="{% url 'product_detail' 22 %}"><img src="/media/products/fenderjazzolive.webp" class="img-fluid" alt="Fender American Professional II Jazz Bass"></a> <!-- pk22 -->
+        <a href="{% url 'product_detail' 22 %}"><img src="https://string-theory.s3.eu-north-1.amazonaws.com/media/products/fenderjazzolive.webp" class="img-fluid" alt="Fender American Professional II Jazz Bass"></a> <!-- pk22 -->
         <p class="text-black mt-3 homepage-font">Fender American Professional II Jazz Bass</p>
         <p class="gold-font homepage-font">£1499.99</p>
       </div>
       <div class="col-6 col-md-3">
-        <a href="{% url 'product_detail' 8 %}"><img src="/media/products/gibsonlespaulblack.webp" class="img-fluid" alt="Gibson Les Paul Classic '60s Electric Guitar"></a> <!-- pk8 -->
+        <a href="{% url 'product_detail' 8 %}"><img src="https://string-theory.s3.eu-north-1.amazonaws.com/media/products/gibsonlespaulblack.webp" class="img-fluid" alt="Gibson Les Paul Classic '60s Electric Guitar"></a> <!-- pk8 -->
         <p class="text-black mt-3 homepage-font">Gibson Les Paul Classic '60s Electric Guitar</p>
         <p class="gold-font homepage-font">£2199.99</p>
       </div>
@@ -61,22 +61,22 @@
   <div class="row text-center mt-4 mb-3 mx-auto w-75">
     <div class="col-6 col-md-3 d-flex justify-content-center">
       <a href="{% url 'products' %}?q=fender">
-        <img src="/media/fender-logo.png" class="img-fluid w-75" alt="fender logo">
+        <img src="https://string-theory.s3.eu-north-1.amazonaws.com/media/fender-logo.png" class="img-fluid w-75" alt="fender logo">
       </a>
     </div>
     <div class="col-6 col-md-3 d-flex justify-content-center">
       <a href="{% url 'products' %}?q=gibson">
-        <img src="/media/gibson-logo.png" class="img-fluid w-75" alt="gibson logo">
+        <img src="https://string-theory.s3.eu-north-1.amazonaws.com/media/gibson-logo.png" class="img-fluid w-75" alt="gibson logo">
       </a>
     </div>
     <div class="col-6 col-md-3 d-flex justify-content-center">
       <a href="{% url 'products' %}?q=squier">
-        <img src="/media/squier-logo.png" class="img-fluid w-75" alt="squier logo">
+        <img src="https://string-theory.s3.eu-north-1.amazonaws.com/media/squier-logo.png" class="img-fluid w-75" alt="squier logo">
       </a>
     </div>
     <div class="col-6 col-md-3 d-flex justify-content-center">
       <a href="{% url 'products' %}?q=epiphone">
-        <img src="/media/epiphone-logo.png" class="img-fluid w-75" alt="epiphone logo">
+        <img src="https://string-theory.s3.eu-north-1.amazonaws.com/media/epiphone-logo.png" class="img-fluid w-75" alt="epiphone logo">
       </a>
     </div>
 </div>
@@ -88,10 +88,10 @@
   </div>
   <div class="row text-center mt-4 justify-content-center">
       <div class="col-md-5 mb-3 mb-md-0 px-3">
-          <img src="/media/collection1.webp" class="img-fluid collection" alt="">
+          <img src="media/collection1.webp" class="img-fluid collection" alt="">
       </div>
       <div class="col-md-5 px-3">
-          <img src="/media/collection2.webp" class="img-fluid collection" alt="">
+          <img src="https://string-theory.s3.eu-north-1.amazonaws.com/media/collection2.webp" class="img-fluid collection" alt="">
       </div>
   </div>
   <div class="row text-center">
@@ -104,22 +104,22 @@
   <div class="row text-center mt-4 justify-content-center">
       <div class="col-6 col-md-3 mb-3 mb-md-0 px-3">
         <a href="https://www.instagram.com" target="_blank">
-          <img src="/media/insta1.webp" class="img-fluid square-img" alt="instagram profile">
+          <img src="https://string-theory.s3.eu-north-1.amazonaws.com/media/insta1.webp" class="img-fluid square-img" alt="instagram profile">
         </a>
       </div>
       <div class="col-6 col-md-3 px-3">
         <a href="https://www.instagram.com" target="_blank">
-          <img src="/media/insta2.webp" class="img-fluid square-img" alt="instagram profile">
+          <img src="https://string-theory.s3.eu-north-1.amazonaws.com/media/insta2.webp" class="img-fluid square-img" alt="instagram profile">
         </a>
       </div>
       <div class="col-6 col-md-3 mb-3 mb-md-0 px-3">
         <a href="https://www.instagram.com" target="_blank">
-          <img src="media/insta3.webp" class="img-fluid square-img" alt="instagram profile">
+          <img src="https://string-theory.s3.eu-north-1.amazonaws.com/media/insta3.webp" class="img-fluid square-img" alt="instagram profile">
         </a>
       </div>
       <div class="col-6 col-md-3 px-3">
         <a href="https://www.instagram.com" target="_blank">
-          <img src="/media/insta4.webp" class="img-fluid square-img" alt="instagram profile">
+          <img src="https://string-theory.s3.eu-north-1.amazonaws.com/media/insta4.webp" class="img-fluid square-img" alt="instagram profile">
         </a>
       </div>
   </div>
