--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -88,7 +88,7 @@
   </div>
   <div class="row text-center mt-4 justify-content-center">
       <div class="col-md-5 mb-3 mb-md-0 px-3">
-          <img src="media/collection1.webp" class="img-fluid collection" alt="">
+          <img src="https://string-theory.s3.eu-north-1.amazonaws.com/media/collection1.webp" class="img-fluid collection" alt="">
       </div>
       <div class="col-md-5 px-3">
           <img src="https://string-theory.s3.eu-north-1.amazonaws.com/media/collection2.webp" class="img-fluid collection" alt="">
