--- a/static/css/base.css
+++ b/static/css/base.css
@@ -31,7 +31,8 @@ body {
 
 .hero {
   height: 70vh;
-  background: url("/media/desktophero.webp") center/cover no-repeat;
+  background: url("https://string-theory.s3.eu-north-1.amazonaws.com/media/desktophero.webp")
+    center/cover no-repeat;
   position: relative;
   max-height: 100%;
 }
@@ -368,7 +369,8 @@ footer {
     font-size: 1rem;
   }
   .hero {
-    background: url("/media/mobilehero.webp") center/cover no-repeat;
+    background: url("https://string-theory.s3.eu-north-1.amazonaws.com/media/mobilehero.webp")
+      center/cover no-repeat;
   }
 }
 
@@ -409,7 +411,8 @@ footer {
     z-index: 1000;
   }
   .hero {
-    background: url("/media/mobilehero.webp") center/cover no-repeat;
+    background: url("https://string-theory.s3.eu-north-1.amazonaws.com/media/mobilehero.webp")
+      center/cover no-repeat;
   }
 }
 
