chore: html validation errors

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -3,10 +3,10 @@
 <div class="row">
     <div class="row navbar text-center d-flex justify-content-between">
         <div class="dropdown show col gold">
-            <a class="text-reset text-decoration-none cursor-hover" id="#" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="text-reset text-decoration-none cursor-hover" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Shop All <i class="fa-solid fa-chevron-down fa-fw"></i>
             </a>
-            <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+            <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="{% url 'products' %}?sort=price&direction=asc">By Price</a></li>
             <li><a class="dropdown-item" href="{% url 'products' %}?sort=rating&direction=desc">By Rating</a></li>
             <li><a class="dropdown-item" href="{% url 'products' %}?sort=category&direction=asc">By Category</a></li>
@@ -14,57 +14,57 @@
             </ul>
         </div>
         <div class="dropdown show col gold">
-            <a class="text-reset text-decoration-none cursor-hover gold" id="#" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="text-reset text-decoration-none cursor-hover gold" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Electric<i class="fa-solid fa-chevron-down fa-fw"></i>
             </a>
-            <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+            <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="{% url 'products' %}?category=electric_guitars&brand=fender">Fender</a></li>
               <li><a class="dropdown-item" href="{% url 'products' %}?category=electric_guitars&brand=gibson">Gibson</a></li>
               <li><a class="dropdown-item" href="{% url 'products' %}?category=electric_guitars">All</a></li>
           </ul>
         </div>
         <div class="dropdown show col gold">
-            <a class="text-reset text-decoration-none cursor-hover" id="#" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="text-reset text-decoration-none cursor-hover" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Acoustic<i class="fa-solid fa-chevron-down fa-fw"></i>
             </a>
-            <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+            <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="{% url 'products' %}?category=acoustic_guitars&brand=fender">Fender</a></li>
               <li><a class="dropdown-item" href="{% url 'products' %}?category=acoustic_guitars&brand=gibson">Gibson</a></li>
               <li><a class="dropdown-item" href="{% url 'products' %}?category=acoustic_guitars">All</a></li>
             </ul>
         </div>
         <div class="dropdown show col gold">
-            <a class="text-reset text-decoration-none cursor-hover" id="#" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="text-reset text-decoration-none cursor-hover" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Bass<i class="fa-solid fa-chevron-down fa-fw"></i>
             </a>
-            <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+            <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="{% url 'products' %}?category=bass_guitars&brand=fender">Fender</a></li>
               <li><a class="dropdown-item" href="{% url 'products' %}?category=bass_guitars&brand=gibson">Gibson</a></li>
               <li><a class="dropdown-item" href="{% url 'products' %}?category=bass_guitars">All</a></li>
             </ul>
         </div>
         <div class="dropdown show col gold text-nowrap">
-          <a class="text-reset text-decoration-none cursor-hover" id="#" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a class="text-reset text-decoration-none cursor-hover" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Accessories<i class="fa-solid fa-chevron-down fa-fw"></i>
           </a>
-          <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+          <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="{% url 'products' %}?category=accessories&description=amplifier">Amplifiers</a></li>
             <li><a class="dropdown-item" href="{% url 'products' %}?category=accessories&description=pedal">Pedals</a></li>
             <li><a class="dropdown-item" href="{% url 'products' %}?category=accessories">All</a></li>
           </ul>
         </div>
         <div class="show col gold">
-          <a class="text-reset text-decoration-none cursor-hover" href="{% url 'blog' %}" id="#" aria-haspopup="true" aria-expanded="false">
+          <a class="text-reset text-decoration-none cursor-hover" href="{% url 'blog' %}" aria-haspopup="true" aria-expanded="false">
           Blog
           </a>
         </div>
         <div class="show col gold">
-          <a class="text-reset text-decoration-none cursor-hover" href="{% url 'contact_us' %}" id="#" aria-haspopup="true" aria-expanded="false">
+          <a class="text-reset text-decoration-none cursor-hover" href="{% url 'contact_us' %}" aria-haspopup="true" aria-expanded="false">
           Contact Us
           </a>
         </div>
         <div class="show col gold">
-          <a class="text-reset text-decoration-none cursor-hover" href="{% url 'about_us' %}" id="#" aria-haspopup="true" aria-expanded="false">
+          <a class="text-reset text-decoration-none cursor-hover" href="{% url 'about_us' %}" aria-haspopup="true" aria-expanded="false">
           About Us
           </a>
         </div>
