--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -1,5 +1,5 @@
 <!-- Buttons and dropdowns for selecting items, mobile view-->
-<header class="fixed-top header-container w-100 mobile-background">
+<div class="fixed-top header-container w-100 mobile-background">
     <nav class="navbar navbar-light">
         <div class="container-fluid">
             <div class="d-flex justify-content-between align-items-center w-100">
@@ -9,7 +9,8 @@
                 <a href="{% url 'home' %}" class="main-logo-link">
                     <h2 class="my-0 title">String Theory</h2>
                 </a>
-                <div> <ul class="list-inline mb-0">
+                <div> 
+                    <ul class="list-inline mb-0">
                         <li class="list-inline-item icon">
                             {% if request.user.is_authenticated %} 
                                 <a href="{% url 'profile' %}" class="text-black">
@@ -32,7 +33,7 @@
             <div class="collapse navbar-collapse test" id="navbarNav">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item dropdown">
-                        <li><a class="nav-link" href="{% url 'home' %}">Home</a></li>
+                        <a class="nav-link" href="{% url 'home' %}">Home</a>
                         <a class="nav-link" href="#" id="navbarDropdownMenuLink1" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             All Products<i class="fa-solid fa-chevron-down fa-fw"></i>
                         </a>
@@ -64,20 +65,20 @@
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link" href="#" id="navbarDropdownMenuLink3" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link" href="#" id="navbarDropdownMenuLink4" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Bass<i class="fa-solid fa-chevron-down fa-fw"></i>
                         </a>
-                        <ul class="dropdown-menu dropdown-menu-start" aria-labelledby="navbarDropdownMenuLink3">
+                        <ul class="dropdown-menu dropdown-menu-start" aria-labelledby="navbarDropdownMenuLink4">
                             <li><a class="dropdown-item" href="{% url 'products' %}?category=bass_guitars&brand=fender">Fender</a></li>
                             <li><a class="dropdown-item" href="{% url 'products' %}?category=bass_guitars&brand=gibson">Gibson</a></li>
                             <li><a class="dropdown-item" href="{% url 'products' %}?category=bass_guitars">All</a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link" href="#" id="navbarDropdownMenuLink3" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link" href="#" id="navbarDropdownMenuLink5" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Accessories<i class="fa-solid fa-chevron-down fa-fw"></i>
                         </a>
-                        <ul class="dropdown-menu dropdown-menu-start" aria-labelledby="navbarDropdownMenuLink3">
+                        <ul class="dropdown-menu dropdown-menu-start" aria-labelledby="navbarDropdownMenuLink5">
                             <li><a class="dropdown-item" href="{% url 'products' %}?category=accessories&description=amplifier">Amplifiers</a></li>
                             <li><a class="dropdown-item" href="{% url 'products' %}?category=accessories&description=pedal">Pedals</a></li>
                             <li><a class="dropdown-item" href="{% url 'products' %}?category=accessories">All</a></li>
@@ -98,10 +99,10 @@
                 </ul>
                     <form action="{% url 'products' %}" method="GET" class="d-flex searchbar-mobile">
                         <input class="form-control mr-1" id="mobilesearchright" type="search" name="q" placeholder="Type to Search...">
-                        <button class="btn btn-outline" for="mobilesearchright" type="submit"><i class="fas fa-search fa-lg"></i></button>
+                        <button class="btn btn-outline" type="submit"><i class="fas fa-search fa-lg"></i></button>
                     </form>
                     <div><hr class="center-diamond"></div>
             </div>
         </div>
     </nav>
-</header>
+</div>
